--- a/player-msa/log-service/src/main/resources/application.properties
+++ b/player-msa/log-service/src/main/resources/application.properties
@@ -16,18 +16,18 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
 #Resilinece4j Properties
-resilience4j.circuitbreaker.instances.inventory.registerHealthIndicator=true
-resilience4j.circuitbreaker.instances.inventory.event-consumer-buffer-size=10
-resilience4j.circuitbreaker.instances.inventory.slidingWindowType=COUNT_BASED
-resilience4j.circuitbreaker.instances.inventory.slidingWindowSize=5
-resilience4j.circuitbreaker.instances.inventory.failureRateThreshold=50
-resilience4j.circuitbreaker.instances.inventory.waitDurationInOpenState=5s
-resilience4j.circuitbreaker.instances.inventory.permittedNumberOfCallsInHalfOpenState=3
-resilience4j.circuitbreaker.instances.inventory.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.beginLog.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.beginLog.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.beginLog.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.beginLog.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.beginLog.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.beginLog.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.beginLog.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.beginLog.automaticTransitionFromOpenToHalfOpenEnabled=true
 
 #Resilience4J Timeout Properties
-resilience4j.timelimiter.instances.inventory.timeout-duration=3s
+resilience4j.timelimiter.instances.beginLog.timeout-duration=3s
 
 #Resilience4J Retry Properties
-resilience4j.retry.instances.inventory.max-attempts=3
-resilience4j.retry.instances.inventory.wait-duration=5s
+resilience4j.retry.instances.beginLog.max-attempts=3
+resilience4j.retry.instances.beginLog.wait-duration=5s
