eureka instance id 수정

--- a/player-msa/api-gateway/src/main/resources/application.properties
+++ b/player-msa/api-gateway/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=api-gateway
 
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
-logging.level.org.springframework.cloud.gateway=TRACE
+logging.level.org.springframework.cloud.gateway=DEBUG
 
 # User Service
 spring.cloud.gateway.routes[0].id=user-service
