--- a/player-msa/log-service/src/main/resources/application.properties
+++ b/player-msa/log-service/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.username=sa
 spring.jpa.show-sql=true
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+# ??? ???? ?? ?? ? server? ????
+eureka.instance.instance-id=${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
 spring.application.name=log-service
 
 management.health.circuitbreakers.enabled=true
